add base file structure

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   
 <script src="https://code.jquery.com/jquery.min.js"></script> 
-<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+<link href="style.css" rel="stylesheet" type="text/css" />
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   
   <meta charset="utf-8">
@@ -21,7 +21,7 @@
   <div class="jumbotron container">
   <div class="page-header bg-danger">
     <h1 class="text-center bg-warning well-lg"><strong>Hey, I am Dalma Gödri</strong></h1>
-    <img class="img-responsive img-rounded" src="https://i.imgur.com/VU4qtbb.jpg" alt="profile-picture">
+    <img class="center img-responsive img-rounded" src="https://i.imgur.com/VU4qtbb.jpg" alt="profile-picture">
     <p class="text-success well-lg">I am a student in CodeBerry School. I am studying coding and programming. <br>If you would like to join, you can do it here:<br><br><a class="btn btn-success btn-lg" href="https://codeberryschool.com/hu/rhu/?r=8b08f-87a75">CodeBerry School <span class="glyphicon glyphicon-heart"></span></a></p>
   </div>
 </div>
