--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   
 <script src="https://code.jquery.com/jquery.min.js"></script> 
-<link href="https://delmi302.github.io/style.css" rel="stylesheet" type="text/css" />
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   
   <meta charset="utf-8">
