--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   
   <title>Dalma Gödri-Bootstrap</title>
   
+  <link rel="stylesheet" href="mystyle.css">
+  
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
   
     <link href="https://fonts.google.com/" rel="stylesheet">
